positional_derive/tests/ui/wrong-filler-type.stderr
error: wrong field configuration

         = help: wrong field configuration

 --> tests/ui/wrong-filler-type.rs:5:33
  |
5 |     #[field(size = 10, filler = "a")]
  |                                 ^^^
